adicionado partials ao projeto

--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -8,14 +8,14 @@
             </div>
             <div class="card-body">
                 <hr>
-                <form>
+                <form method="POST" action="/salvarpergunta">
                     <label>Título</label>
-                    <input type="text" placeholder="Título" class="form-control">
+                    <input type="text" placeholder="Título" class="form-control" name="titulo">
                     <br>
                     <label>Descrição</label>
-                    <textarea placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
+                    <textarea placeholder="Descreva sua pergunta aqui" class="form-control" nome="descricao" ></textarea>
                     <br>
-                    <button class="btn btn-success">Perguntar</button>
+                    <button class="btn btn-success">Perguntar</button>F
                 </form>
             </div>
         </div>
