--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,5 +7,5 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" href="/img/question.png" type="image/x-icon">
-    <title>Perguntar</title>
+    <title>Perguntas</title>
 </head>
