--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -1,24 +1,26 @@
 <%- include('partials/header.ejs') %>
-<%- include('partials/navbar.ejs') %>
-<body>
-    <div class="container">
-        <div class="card" id="formulario-pergunta">
-            <div class="card-header">
-                <h3>Realizar pergunta</h3>
+    <%- include('partials/navbar.ejs') %>
+
+        <body>
+            <div class="container">
+                <div class="card" id="formulario-pergunta">
+                    <div class="card-header">
+                        <h3>Realizar pergunta</h3>
+                    </div>
+                    <div class="card-body">
+                        <hr>
+                        <form method="POST" action="/salvarpergunta">
+                            <label>Título</label>
+                            <input type="text" placeholder="Título" class="form-control" name="titulo">
+                            <br>
+                            <label>Descrição</label>
+                            <textarea placeholder="Descreva sua pergunta aqui" class="form-control"
+                                name="descricao"></textarea>
+                            <br>
+                            <button class="btn btn-success">Perguntar</button>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <div class="card-body">
-                <hr>
-                <form method="POST" action="/salvarpergunta">
-                    <label>Título</label>
-                    <input type="text" placeholder="Título" class="form-control" name="titulo">
-                    <br>
-                    <label>Descrição</label>
-                    <textarea placeholder="Descreva sua pergunta aqui" class="form-control" nome="descricao" ></textarea>
-                    <br>
-                    <button class="btn btn-success">Perguntar</button>F
-                </form>
-            </div>
-        </div>
-    </div>
-</body>
-<%- include('partials/footer.ejs') %>
+        </body>
+        <%- include('partials/footer.ejs') %>
