--- a/views/pergunta.ejs
+++ b/views/pergunta.ejs
@@ -12,6 +12,7 @@
             <label>Resposta:</label>
             <textarea placeholder="Digite sua resposta" class="form-control" name="corpo"></textarea>
             <br>
+            <input type="hidden" name="pergunta" value="<%= pergunta.id %>">
             <button type="submit" class="btn btn-success">Responder</button>
         </form>
     </div>
